<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_linear"
            android:title="@string/linearlayout" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/relativelayout" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_border_table"
            android:title="@string/tablelayout" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_crop_frame"
            android:title="@string/framelayout" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_apps_grid"
            android:title="@string/gridlayout" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/constraint" />

    </group>

</menu>
